language_tests/source_files/invalid/clone_via_extension_no_impl.tr
// Test: Clone via extension requires explicit implementation
// Clone cannot be auto-synthesized via extension syntax.
// Users must provide the clone method.

struct MyType {
    value: int32
}

// ERROR: Extension conformance to Clone requires explicit implementation
impl Clone for MyType {
    // Missing clone() method - synthesis not available for extensions
}

func main() {
    let t = MyType { value: 42 }
    std.print("This should not compile\n")
}
